made the biggest part of the JS code to get it working

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 
     <div class="middle">
         <input class="search-input" placeholder="Type something">
-        <div class="videos"></div>
+        <div class="videos">
+            
+        </div>
     </div>
 
     <div class="indicators">
