JS part is complete

--- a/index.html
+++ b/index.html
@@ -9,23 +9,21 @@
 </head>
 
 <body>
-    <div class="top">
-        <h1 class="title">Jiffy</h1>
-        <a class="search-clear">
+    <div class="top grid">
+        <h1 class="title full-area">Jiffy</h1>
+        <a class="search-clear full-area">
             <img src="assets/close.svg">
         </a>
     </div>
 
-    <div class="middle">
-        <input class="search-input" placeholder="Type something">
-        <div class="videos">
-            
-        </div>
+    <div class="middle grid">
+        <input class="search-input full-area" placeholder="Type something">
+        <div class="videos grid full-area"></div>
     </div>
 
-    <div class="indicators">
-        <img class="spinner" src="assets/oval.svg">
-        <span class="search-hint">Hit enter to search</span>
+    <div class="indicators grid">
+        <img class="spinner full-area" src="assets/oval.svg">
+        <span class="search-hint full-area">Hit enter to search</span>
     </div>
 
     <script src="main.js"></script>
