--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="transitions.css">
+    <link rel="stylesheet" href="responsive.css">
 </head>
 
 <body>
